<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="summary_title">Summary</string>
    <string name="income_title">Income</string>
    <string name="paid_expenses_title">Paid Expenses</string>
    <string name="outstanding_expenses_title">Outstanding Expenses</string>
    <string name="balance_title">Balance</string>
    <string name="add_budget_title">Add Budget</string>
    <string name="budget_title_hint">Enter the Title</string>
    <string name="add_expense_title">Add Expense</string>
    <string name="expense_description_hint">Enter the Description</string>
    <string name="budget_description_hint">Description</string>
    <string name="budget_amount_hint">Amount</string>
    <string name="budget_date_hint">Select Date</string>
    <string name="budget_savings_hint">Savings Goal</string>
    <string name="save_budget">Save</string>
    <string name="action_save">Save As Image</string>
    <string name="action_delete">Delete</string>
    <string name="cab_title">Delete</string>
</resources>
