<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jaybhatt.expensetracker.NewBudgetActivity">

        <TextView
            android:id="@+id/text_view_add_budget_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:text="@string/add_budget_title" />

        <EditText
            android:id="@+id/edit_text_budget_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:hint="@string/budget_title_hint"
            android:textAlignment="center"
            android:layout_below="@+id/text_view_add_budget_title"
            />

        <EditText
            android:id="@+id/edit_text_budget_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:hint="@string/budget_description_hint"
            android:textAlignment="center"
            android:layout_below="@+id/edit_text_budget_title"
            />

        <EditText
            android:id="@+id/edit_text_budget_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:hint="@string/budget_amount_hint"
            android:textAlignment="center"
            android:layout_below="@+id/edit_text_budget_description"
            />

        <EditText
            android:id="@+id/edit_text_budget_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:hint="@string/budget_date_hint"
            android:textAlignment="center"
            android:layout_below="@+id/edit_text_budget_amount"
            android:onClick="show"
            />

        <EditText
            android:id="@+id/edit_text_budget_saving"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:hint="@string/budget_savings_hint"
            android:textAlignment="center"
            android:layout_below="@+id/edit_text_budget_date"
            />

        <Button
            android:id="@+id/button_save_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/save_budget"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/edit_text_budget_saving"
            android:onClick="save"
            />

</RelativeLayout>
