<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.jaybhatt.expensetracker.HomeFragment">

        <TextView
            android:id="@+id/text_view_summary_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:text="@string/summary_title" />

        <TextView
            android:id="@+id/text_view_income_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:text="@string/income_title"
            android:layout_below="@+id/text_view_summary_title"/>

        <TextView
            android:id="@+id/text_view_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_toRightOf="@+id/text_view_income_title"
            android:layout_below="@+id/text_view_summary_title"
            />

        <TextView
            android:id="@+id/text_view_paid_expenses_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:text="@string/paid_expenses_title"
            android:layout_below="@+id/text_view_income_title"/>

        <TextView
            android:id="@+id/text_view_paid_expenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_toRightOf="@+id/text_view_paid_expenses_title"
            android:layout_below="@+id/text_view_income_title"
            />

        <TextView
            android:id="@+id/text_view_outstanding_expenses_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:text="@string/outstanding_expenses_title"
            android:layout_below="@+id/text_view_paid_expenses_title"/>

        <TextView
            android:id="@+id/text_view_outstanding_expenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_toRightOf="@+id/text_view_outstanding_expenses_title"
            android:layout_below="@+id/text_view_paid_expenses_title"
            />

        <TextView
            android:id="@+id/text_view_balance_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:text="@string/balance_title"
            android:layout_below="@+id/text_view_outstanding_expenses_title"/>

        <TextView
            android:id="@+id/text_view_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_toRightOf="@+id/text_view_balance_title"
            android:layout_below="@+id/text_view_outstanding_expenses_title"
            />

</RelativeLayout>