<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jaybhatt.expensetracker.NewExpenseActivity">

    <TextView
        android:id="@+id/text_view_add_expenditure_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:text="@string/add_expense_title" />

    <EditText
        android:id="@+id/edit_text_expenditure_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:hint="@string/expense_description_hint"
        android:layout_below="@+id/text_view_add_expenditure_title"
        />

    <EditText
        android:id="@+id/edit_text_expenditure_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:hint="@string/budget_amount_hint"
        android:layout_below="@+id/edit_text_expenditure_description"
        />

    <EditText
        android:id="@+id/edit_text_expenditure_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:hint="@string/budget_date_hint"
        android:layout_below="@+id/edit_text_expenditure_amount"
        android:onClick="show"
        />

    <Spinner
        android:id="@+id/spinner_expense_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_expenditure_date"
        android:layout_margin="10dp"
        >

    </Spinner>

    <RadioGroup
        android:id="@+id/radio_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_expense_category"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:orientation="horizontal"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Paid"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Unpaid"
            />
    </RadioGroup>

    <Button
        android:id="@+id/button_save_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_below="@+id/radio_type"
        android:onClick="saveExpense"
        />

</RelativeLayout>
